styles/login-register.css
.login-register-main{
    border-left: 1px solid rgba(255, 255, 255, 0.438);
    border-right: 1px solid rgba(255, 255, 255, 0.438);
    width: 700px;
    min-height: 100%;
}

.lrm-wrapper{
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
}

.sn-logo-lrm{
    margin-top: 50px;
    margin-bottom: 30px;
}

.lrm-logo-text{
    font-size: 1.8rem;
    margin-top: 8px;
}

.lrm-tabs{
    width: 100%;
    border-bottom: 1px solid rgba(255, 255, 255, 0.438);
    display: flex;
    justify-content: center;
    align-items: center;
}

.lrmt-btn{
    width: 150px;
    height: 50px;
    background-color: transparent;
    border: none;
    color: rgba(255, 255, 255, 0.651);
    font-weight: 300;
}
.lrmt-btn:hover{
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.075);
}

.lrmt-btn-active{
    color: white;
    border-bottom: 3px solid rgb(255, 255, 255);
    font-weight: 700;
}

.tabs-content{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 20px;
}

.login-form-div{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.login-form{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 30px;
}

.login-text{
    font-size: 1.9rem;
    margin-top: 50px;
    margin-bottom: 40px;
}

.login-form > input{
    width: 70%;
    height: 60px;
    margin-bottom: 20px;
    padding-left: 20px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 5px;
    font-size: 1.3rem;
}

.login-form label{
    font-weight: 300;
}

.login-btn{
    margin-top: 20px;
    background-color: white !important;
    color: black;
    border-radius: 60px !important;
}
.login-btn:hover{
    cursor: pointer;
    background-color: rgb(231, 230, 230) !important;
}

.login-form input::placeholder{
    font-size: 1.3rem;
    font-weight: 300;
}
.forgot-pass-btn{
    background-color: transparent;
    border: none;
    font-weight: 300;
    border-bottom: 1px solid white;
}
.forgot-pass-btn:hover{
    cursor: pointer;
    font-weight: 600;
}

/* ----------------- */

.register-form-div{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.register-form{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 30px;
}

.register-text{
    font-size: 1.9rem;
    margin-top: 50px;
    margin-bottom: 30px;
}

.register-form > input{
    width: 70%;
    height: 60px;
    margin-bottom: 10px;
    padding-left: 20px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 5px;
    font-size: 1.3rem;
}
.fname-lname{
    width: 70%;
    display: flex;
    justify-content: space-between;
}
.fname-lname input{
    width: 49%;
    height: 60px;
    margin-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 5px;
    font-size: 1.3rem;
}

.register-btn{
    margin-top: 30px;
    background-color: white !important;
    color: black;
    border-radius: 60px !important;
}
.register-btn:hover{
    cursor: pointer;
    background-color: rgb(231, 230, 230) !important;
}

.register-form input::placeholder{
    font-size: 1.3rem;
    font-weight: 300;
    color: rgba(190, 191, 192, 0.61);
}

/* ----------------------- */

.con-form-div{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.con-form{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 30px;
}

.con-text{
    font-size: 1.9rem;
    margin-top: 30px;
    margin-bottom: 20px;
}

.con-form > input{
    width: 70%;
    height: 60px;
    margin-bottom: 10px;
    padding-left: 20px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 5px;
    font-size: 1.3rem;
}

.con-form textarea{
    width: 70%;
    height: 60px;
    margin-bottom: 10px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 5px;
    font-size: 1.3rem;
    resize: none;
    height: 250px;
    padding: 20px;
    font-weight: 300;
}
.con-form textarea::placeholder{
    font-weight: 300;
}

.con-btn{
    margin-top: 30px;
    background-color: white !important;
    color: black;
    border-radius: 60px !important;
}

.con-btn:hover{
    cursor: pointer;
    background-color: rgb(231, 230, 230) !important;
}

.con-form input::placeholder{
    font-size: 1.3rem;
    font-weight: 300;
    color: rgba(190, 191, 192, 0.61);
}

/* -------------- CHECKBOX ---------------------- */

/* The container */
.container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 1.2rem;
    user-select: none;
  }
  
  /* Hide the browser's default checkbox */
  .container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: transparent;
    border-radius: 7px;
    border: 1px solid white;
  }
  
  /* On mouse-over, add a grey background color */
  .container:hover input ~ .checkmark {
    background-color: #ccc;
  }
  
  /* When the checkbox is checked, add a blue background */
  .container input:checked ~ .checkmark {
    background-color: white;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .container input:checked ~ .checkmark:after {
    display: block;
  }
  
  /* Style the checkmark/indicator */
  .container .checkmark:after {
    left: 7.5px;
    top: 4px;
    width: 5px;
    height: 10px;
    border: solid rgb(24, 23, 23);
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }


/* ---------------------------------------------- */

